--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -46,6 +46,9 @@
     <div class="gifs container">
         <div class="row">
            <h1>Miejsce na wyświetlenie gifów:)</h1>
+            <h2>Zmiana</h2>
+            <div><img th:src="${gif.getThymeleafFilePath()}"/></div>
+
         </div>
     </div>
 
