--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,9 +44,13 @@
         </div>
     </div>
     <div class="gifs container">
-        <div th:each="gif : ${gifs}">
-            <div class="row col s12">
-                <img th:src="@{'/gifs/' + ${gif.name} + '.gif'}" alt="gif" />
+        <div class="gifs container">
+            <div class="row">
+                <div th:each="gif : ${gifs}" class="col s12 l4">
+                    <div class="row col s12">
+                        <img th:src="@{'/gifs/' + ${gif.name} + '.gif'}" alt="gif" />
+                    </div>
+                </div>
             </div>
         </div>
     </div>
