--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -48,7 +48,9 @@
             <div class="row">
                 <div th:each="gif : ${gifs}" class="col s12 l4">
                     <div class="row col s12">
+                        <a th:href="@{'/gif/' + ${gif.name}}">
                         <img th:src="@{'/gifs/' + ${gif.name} + '.gif'}" alt="gif" />
+                        </a>
                     </div>
                 </div>
             </div>
