added Gif Model

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -43,11 +43,11 @@
             </div>
         </div>
     </div>
-    
+
     <div th:replace="fragments/gifs :: gifs"></div>
 
     <script th:src="@{/vendor/jquery/jquery-1.11.3.js}"></script>
 <script th:src="@{/vendor/materialize/js/materialize.js}"></script>
 <script th:src="@{/app.js}"></script>
 </body>
-</html>
+</html>g
