--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-    <div th:replace="fragments/gifs :: gifs"></div>
+    <div th:replace="gifs :: gifs"></div>
 
     <script th:src="@{/vendor/jquery/jquery-1.11.3.js}"></script>
 <script th:src="@{/vendor/materialize/js/materialize.js}"></script>
